src/test/deca/context/invalid/without_class/invalid_cast3.deca
// Description:
//    Test readFloat storing it into a int   	  
//
// Resultats:
//    INVALID_CAST: Type \(.\)\+ cannot be cast to type \(.\)\+ 
//    line 8
{
    int entry = readFloat();
}